# chronicler

./: .env.example  .gitignore  JIRA_README.md  README.md  REDMINE_IMPLEMENTATION_SUMMARY.md  REDMINE_README.md  journal.md  pyproject.toml  redmine_alternatives.py  redmine_api_key.py  redmine_csv_viewer.py  redmine_debug.py  redmine_direct_ip.py  redmine_multi_auth.py  redmine_session.py  redmine_test.py  redmine_tickets.py  test_docvars.py  test_jira_cli.py  trains_issues.csv
src/chronicler/: __init__.py  __main__.py  docx_reader.py  jira_client.py  redmine_client.py
tests/: STMA2025D0060_BEMU-PFZ__PQSP_B01.docx  STMA4000D0001__SW_QSP_B__2025-08-21.docx  STMA4000D0001__SW_QSP_C01__2025-08-22.docx  STMA4000D0020__VORLAGE_Minimal_Dokument__{revision}.pdf.docx  test_cli.py  test_docx_add_vars.py  test_docx_check.py  test_docx_reader.py  test_empty_vars.docx  test_real_docx.py
